# shaliwood-voice-bot

./: .gitignore  CRON_PROCESSING.md  README.md  cron_processor.py  main.py  pyproject.toml
scripts/: NGROK_SETUP.md  README.md  WEBHOOK_SECURITY.md  generate_secret.sh  run_cron_processing.sh  setup_webhook_local.sh  start_webhook_local.sh  stop_webhook_local.sh
src/shaliwood_voice_bot/: __init__.py  config.py  cron_processor.py  data_extractor.py  data_manager.py  hebrew_console.py  local_processor.py  main.py  response_formatter.py  sheets.py  telegram_bot.py  voice_processor.py
